--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/drawer": "^6.7.0",
+    "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-pager-view": "^6.3.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.13.0",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
