--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "@react-native/babel-preset": "0.74.84",
     "@react-native/eslint-config": "0.74.84",
     "@react-native/metro-config": "0.74.84",
-    "@react-native/typescript-config": "0.74.84",
-    "@types/react": "^18.2.6",
+    "@react-native/typescript-config": "^0.74.84",
+    "@types/react": "^18.3.3",
+    "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
@@ -45,7 +46,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "engines": {
     "node": ">=18"
