--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ProjectAndroid",
+  "name": "movies-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,47 +7,38 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "start:ios": "npm run ios -- --simulator='iPhone 15 Pro Max'"
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-navigation/bottom-tabs": "^6.6.0",
-    "@react-navigation/drawer": "^6.7.0",
-    "@react-navigation/material-top-tabs": "^6.6.13",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.4.0",
-    "axios": "^1.7.2",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.5",
     "react": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-gesture-handler": "^2.17.1",
-    "react-native-pager-view": "^6.3.3",
-    "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.13.0",
-    "react-native-safe-area-context": "^4.10.7",
-    "react-native-screens": "^3.32.0",
-    "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.1.0",
-    "zustand": "^4.5.4"
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "^2.14.1",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/core": "^7.24.8",
+    "@babel/preset-env": "^7.24.8",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.84",
-    "@react-native/eslint-config": "0.74.84",
-    "@react-native/metro-config": "0.74.84",
-    "@react-native/typescript-config": "^0.74.84",
-    "@types/react": "^18.3.3",
+    "@react-native/babel-preset": "0.73.19",
+    "@react-native/eslint-config": "0.73.2",
+    "@react-native/metro-config": "0.73.3",
+    "@react-native/typescript-config": "0.73.1",
+    "@types/react": "^18.2.6",
     "@types/react-native": "^0.73.0",
-    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-native-dotenv": "^3.4.11",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.0.4"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
