--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.1",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.4.0",
     "axios": "^1.6.5",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-gesture-handler": "^2.14.1",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0"
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.32.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.8",
